syntax = "proto3";

import "github.com/hi20160616/fetchnews-api/proto/v1/fetchnews.proto";

option go_package = "github.com/hi20160616/ms-zaobao/api/fetchnews/zaobao/v1";

package fetchnews.zaobao.v1;

service FetchBBC{
  rpc ListArticles(fetchnews.v1.ListArticlesRequest) returns (fetchnews.v1.ListArticlesResponse){ }
  rpc GetArticle(fetchnews.v1.GetArticleRequest) returns (fetchnews.v1.Article){ }
  rpc SearchArticles(fetchnews.v1.SearchArticlesRequest) returns (fetchnews.v1.SearchArticlesResponse){ }
}
